--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,31 +1,36 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
-    defaultConfig {
-        applicationId "com.example.zy.sagittarius"
-        minSdkVersion 19
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  compileSdkVersion 25
+  buildToolsVersion "25.0.3"
+  defaultConfig {
+    applicationId "com.example.zy.sagittarius"
+    minSdkVersion 19
+    targetSdkVersion 25
+    versionCode 1
+    versionName "1.0"
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    implementation 'com.android.support:appcompat-v7:25.3.1'
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:25.3.1'
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
+  androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    exclude group: 'com.android.support', module: 'support-annotations'
+  })
+  implementation 'com.android.support:appcompat-v7:25.3.1'
+  testImplementation 'junit:junit:4.12'
+  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+  compile 'com.android.support:design:25.3.1'
+  implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+  implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
+  compile 'com.google.code.gson:gson:2.8.0'
+  compile 'com.orhanobut:logger:2.1.0'
+  compile 'com.sina.weibo.sdk:core:2.0.3:openDefaultRelease@aar'
 }
