修改:去掉微博引导sdk 修改StretchableFloatingButton中Handler使用官方Handler.Callback方式 增添: 增加CheckStyle, 目前使用square公司的settings 增加eventbus,circleImageView,RxJava,RxAndroid包 增加CustomCrashHandler工具类，手机crash日志 自定义可伸缩StretchableFloatingButton 增加仿QQ的DrawerLayout + ToolBar + NavigationView实现侧滑功能 待解决bug：自定义控件获取焦点问题（第一次开启app,需点击一下才可以获取焦点，再次点击执行OnClick）。 解决bug：异步加载广告界面当网络不好时获取资源失败或者时间超过3s，此时广告界面OnDestory此时在去设置图片崩溃。 需要调整bug：对于android6.0之后，APN权限问题（目前是在AndroidManifest文件中加入WRITE_APN_SETTINGS）但是该权限显示错误，

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.WRITE_APN_SETTINGS"/>
   <!-- 用于调用 JNI -->
   <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
@@ -17,7 +18,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".view.WelComeActivity">
+    <activity android:name=".activity.WelComeActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -25,9 +26,9 @@
       </intent-filter>
     </activity>
 
-    <activity android:name=".view.HomeActivity">
+    <activity android:name=".activity.HomeActivity">
     </activity>
-    <activity android:name=".view.LoginActivity">
+    <activity android:name=".activity.LoginActivity">
     </activity>
   </application>
 
