--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,8 @@ dependencies {
   implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
   compile 'com.google.code.gson:gson:2.8.0'
   compile 'com.orhanobut:logger:2.1.0'
-  compile 'com.sina.weibo.sdk:core:2.0.3:openDefaultRelease@aar'
+  compile 'de.hdodenhof:circleimageview:2.1.0'
+  implementation 'org.greenrobot:eventbus:3.0.0'
+  implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
