--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,20 +20,21 @@ android {
 }
 
 dependencies {
-  implementation fileTree(include: ['*.jar'], dir: 'libs')
-  androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-    exclude group: 'com.android.support', module: 'support-annotations'
-  })
-  implementation 'com.android.support:appcompat-v7:25.3.1'
-  testImplementation 'junit:junit:4.12'
-  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-  compile 'com.android.support:design:25.3.1'
-  implementation 'com.squareup.okhttp3:okhttp:3.8.1'
-  implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
-  compile 'com.google.code.gson:gson:2.8.0'
-  compile 'com.orhanobut:logger:2.1.0'
-  compile 'de.hdodenhof:circleimageview:2.1.0'
-  implementation 'org.greenrobot:eventbus:3.0.0'
-  implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
-  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:25.4.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.orhanobut:logger:2.1.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
 }
