--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-  <uses-permission android:name="android.permission.WRITE_APN_SETTINGS"/>
+  <!--<uses-permission android:name="android.permission.WRITE_APN_SETTINGS"/>-->
   <!-- 用于调用 JNI -->
   <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
