--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     maven { url "https://dl.bintray.com/thelasterstar/maven/" }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
+    classpath 'com.android.tools.build:gradle:3.0.0-beta4'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
