--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,43 @@
 apply plugin: 'com.android.application'
 
+def cmd = 'git rev-list HEAD --count'
+def gitVersion = cmd.execute().text.trim().toInteger()
+
 android {
-  compileSdkVersion 25
-  buildToolsVersion "25.0.3"
-  defaultConfig {
-    applicationId "com.example.zy.sagittarius"
-    minSdkVersion 19
-    targetSdkVersion 25
-    versionCode 1
-    versionName "1.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    signingConfigs {
+        config {
+            keyAlias 'mylottery'
+            keyPassword 'ygyc123456'
+            storeFile file('/Users/zhaoy/Downloads/mylottery.jks')
+            storePassword 'ygyc123456'
+        }
     }
-  }
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
+    defaultConfig {
+
+        applicationId "com.example.zy.sagittarius"
+        minSdkVersion 19
+        targetSdkVersion 25
+        versionCode gitVersion
+        versionName "2.6.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    buildTypes {
+        release {
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            signingConfig signingConfigs.config
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:support-v4:25.4.0'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -28,13 +45,19 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.4.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.orhanobut:logger:2.1.0'
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.orhanobut:logger:2.1.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation files('/Users/zhaoy/Downloads/Android_SDK_3.1.1/libs/libammsdk.jar')
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
 }
