--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <!-- <uses-permission android:name="android.permission.WRITE_APN_SETTINGS"/> -->
     <!-- 用于调用 JNI -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
         android:name=".MyApplication"
@@ -25,12 +26,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.HomeActivity"></activity>
-        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.HomeActivity"/>
+        <activity android:name=".activity.LoginActivity"/>
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:exported="true" />
-        <activity android:name=".activity.CollapsingActivity"></activity>
+        <activity android:name=".activity.CollapsingActivity"/>
+        <activity android:name=".activity.BaseActivity"/>
     </application>
 
 </manifest>
