--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,12 @@ buildscript {
   repositories {
     google()
     jcenter()
+    mavenCentral()
     maven { url "https://dl.bintray.com/thelasterstar/maven/" }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.1.3'
+    classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
